<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">UnWired Bridge</string>

    <string name="notif_title_on">ADB over Wifi is running</string>
    <string name="notif_title_off">ADB over Wifi is not running</string>

    <string name="main_noRoot">Sorry\nYour phone must be rooted.</string>
    <string name="main_hintOn">- Touch to start ADB -</string>
    <string name="main_hintOff">- Touch to stop ADB -</string>
    <string name="main_wifiQuestion">Wifi</string>
    <string name="main_connect">Connect</string>
    <string name="main_quit">Quit</string>
    <string name="image_description">ADB Image</string>
    <string name="ip_address_prefix">IP:</string>

    <string name="start_adb">Turn ADB on</string>
    <string name="stop_adb">Turn ADB off</string>

    <!-- Settings -->
    <string name="settings">Settings</string>

    <string name="port">Port number</string>
    <string name="port_summary">Default port is:</string>

    <string name="notification">Notification</string>
    <string name="server_noti">Persist notifications, even when app is not running</string>

    <string name="wifi_on">WiFi auto on</string>
    <string name="server_wifi_on">Turn on WiFi when app starts</string>

    <string name="wakelock_title">Turn on WakeLock</string>
    <string name="wakelock_subtitle">Keep the screen on</string>

    <string name="boot_up_title">Start at Boot</string>
    <string name="boot_up_summary">Start app upon boot completion</string>

    <!-- Defaults -->
    <string name="default_port">5555</string>
    <string name="default_notif">false</string>
    <string name="default_wifi_on">false</string>
    <string name="default_wakelock">false</string>
    <string name="default_boot_up">false</string>

    <!-- Keys -->
    <string name="pref_port_key">key_port</string>
    <string name="pref_notif_key">key_notif</string>
    <string name="pref_wifi_on_key">key_wifi_on</string>
    <string name="pref_wakelock_key">key_wakelock</string>
    <string name="pref_boot_up">key_boot_up</string>
    <string name="pref_boot_up_auto_connect">pref_boot_up_auto_connect</string>
    <string name="boot_up_auto_connect_summary">Automatically enable ADB at startup</string>
    <string name="boot_up_auto_connect_title">Auto connect at boot</string>

</resources>